opam-version: "1.3"
name: "ocplib-nullable-array"
version: "0.1"
maintainer: "Pierre Chambart <pierre.chambart@ocamlpro.com>"
authors: "Pierre Chambart <pierre.chambart@ocamlpro.com>"
homepage: "https://github.com/OCamlPro/ocplib-nullable-array"
bug-reports: "https://github.com/OCamlPro/ocplib-nullable-array/issues"
license: "MIT"
dev-repo: "https://github.com/OCamlPro/ocplib-nullable-array.git"

build: [
  ["jbuilder" "build" "--only-packages" "nullable-array" "--root" "." "-j" jobs "@install"]
]

build-test: [
  ["jbuilder" "runtest"]
]

install: [] (* no install rules: done through a .install file *)

available: [
  ocaml-version >= "4.02"   (* use -keep-locs and attributes *)
  & ocaml-version <= "4.05" (* need to be tested before announcing that a version is correct *)
]

depends: [
  "jbuilder" {build & >= "1.0+beta8"}
]
