opam-version: "2.0"
name: "ocplib-nullable-array"
version: "1.0.0"
maintainer: "Pierre Chambart <pierre.chambart@ocamlpro.com>"
authors: "Pierre Chambart"
homepage: "https://github.com/chambart/ocaml-nullable-array"
bug-reports: "https://github.com/chambart/ocaml-nullable-array/issues"
license: "MIT"
dev-repo: "git+https://github.com/chambart/ocaml-nullable-array.git"
synopsis:
  "More efficient `'a option array`"
description: """

Small self-contained library providing an efficient implementation for a type equivalent to `'a option array`
"""

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "@doc"] {with-doc}
]

depends: [
  "dune" {>= "2.0"}
  "ocaml" {>= "4.03"   (* use Sys.opaque_identity *)
           & < "4.13~"} (* need to be tested before announcing that a version is correct *)
]
